@@ -1657,6 +1657,7 @@ static SEXP listRemove(SEXP x, SEXP s, int ind)
     return val;
 }
 
+// For  x[s] <- y  --- extract (x, s, y)  and return the number of indices
 static R_INLINE int SubAssignArgs(SEXP args, SEXP *x, SEXP *s, SEXP *y)
 {
     if (CDR(args) == R_NilValue)
@@ -1776,7 +1777,7 @@ SEXP attribute_hidden do_subassign_dflt(SEXP call, SEXP op, SEXP args, SEXP rho)
     }
     else if (xlength(x) == 0)
     {
-        if (xlength(y) == 0)
+        if (xlength(y) == 0 && TYPEOF(x) == TYPEOF(y))
         {
             UNPROTECT(1);
             return (x);
@@ -1883,9 +1884,9 @@ static SEXP DeleteOneVectorListItem(SEXP x, R_xlen_t which)
 
 /* The [[<- operator; should be fast.
  *     ====
- * args[1] = object being subscripted
- * args[2] = list of subscripts
- * args[3] = replacement values */
+ * args[1] =: x    = object being subscripted
+ * args[2] =: subs = list of subscripts
+ * args[3] =: y    = replacement values */
 SEXP attribute_hidden do_subassign2(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
     SEXP ans;
